--- a/entrega-nu-kenzie/src/components/Form/Form.css
+++ b/entrega-nu-kenzie/src/components/Form/Form.css
@@ -9,7 +9,7 @@
     align-items: center;
     justify-content: center;
     margin-top: 39px;
-    margin-left: 258px;
+    margin-left: 10%;
 }
 
 .description{
