--- a/entrega-nu-kenzie/src/components/TotalMoney/TotalMoney.css
+++ b/entrega-nu-kenzie/src/components/TotalMoney/TotalMoney.css
@@ -5,7 +5,7 @@
     height: 96px;
     border: solid 2px #E9ECEF;
     border-radius: 8px;
-    margin-left: 259px;
+    margin-left: 10%;
     margin-top: 16px;
 }
 
