--- a/entrega-nu-kenzie/src/App.css
+++ b/entrega-nu-kenzie/src/App.css
@@ -2,7 +2,10 @@
   text-align: center;
   display: flex;
   flex-direction: column;
+  min-width: 100%;
 }
+
+
 
 body{
   background-color: #fff;
@@ -13,10 +16,11 @@ body{
 .App-header {
   background-color: #F8F9FA;
   min-height: 88px;
+  width: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   font-size: calc(10px + 2vmin);
 }
 
@@ -26,7 +30,6 @@ body{
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-size: 35px;
-  margin-left: 259px;
 }
 
 .App-header button{
@@ -39,14 +42,21 @@ body{
   padding: 10px;
   text-align: center;
   margin-top: 10px;
-  margin-right: 307px;
+  margin-right: 3%;
 }
 
 .main-page{
   display: flex;
+  justify-content: center;
+  min-width: 100%;
+  margin: 0 auto;
 }
 
-@media (max-width:391px){
+.list{
+  width: 50%;
+}
+
+@media (max-width:700px){
   .App-header{
     width: 156vw;
     flex-direction: column;
@@ -54,6 +64,10 @@ body{
     justify-content: center;
     gap: 30px;
 
+  }
+
+  .main-page{
+    flex-direction: column;
   }
 
   .App-header h1{
