--- a/entrega-nu-kenzie/src/List/List.css
+++ b/entrega-nu-kenzie/src/List/List.css
@@ -9,13 +9,13 @@
 .menu-list{
     display: flex;
     flex-direction: row;
-
+    justify-content: center;
 }
 
 .menu-list ul{
     display: flex;
     list-style: none;
-    margin-left: 70px;
+    margin-left: 5%;
 }
 
 .menu-list ul li{
